k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pomodorium
spec:
  serviceName: "pomodorium"
  selector:
    matchLabels:
      app: pomodorium
  #replicas: 2
  template:
    metadata:
      labels:
        app: pomodorium
    spec:
      containers:
      - name: pomodorium
        image: mardsystems/pomodorium:v1.0.0-alpha.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5174
        # volumeMounts:
        # - mountPath: "/data"
        #   name: pvc-10gb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: read-database
spec:
  #replicas: 2
  selector:
    matchLabels:
      app: read-database
  template:
    metadata:
      labels:
        app: read-database
    spec:
      containers:
      - name: read-database
        image: mongo:3.6
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: write-database
spec:
  #replicas: 2
  selector:
    matchLabels:
      app: write-database
  template:
    metadata:
      labels:
        app: write-database
    spec:
      containers:
      - name: write-database
        image: mongo:3.6
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
