k8s/read-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: read-database
spec:
  #replicas: 2
  selector:
    matchLabels:
      app: read-database
  template:
    metadata:
      labels:
        app: read-database
    spec:
      containers:
      - name: read-database
        image: mongo:3.6
        ports:
        - containerPort: 27017
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: read-database
spec:
  selector:
    app: read-database
  ports:
  - name: mongodb    
    protocol: TCP
    port: 27017
    targetPort: 27017
